@@ -26,6 +26,11 @@ sub LaTeX_ToUnicode_convert_hook {
   my $endcw = $LaTeX::ToUnicode::endcw;
   die "no endcw regexp in LaTeX::ToUnicode??" if ! $endcw;
 
+  # arbitrary Unicode character; this command doesn't exist in (La)TeX
+  # TUGboat, but useful for translating, e.g., tb130knuth-tuneup.bbl.
+  # Or can use \\x itself, which is specially understood in LaTeX::ToUnicode.
+  $string =~ s,\\tbunichar$endcw\{(.*?)\},\\x{$1}},g;
+
   # Eliminate some raw TeX commands we end up using.
   $string =~ s/\\[hv]fill?$endcw//g;
   $string =~ s/\\[hv]filneg$endcw//g;
@@ -55,21 +60,23 @@ sub LaTeX_ToUnicode_convert_hook {
   $string =~ s,\\verb(.)(.*?)(\1),<tt>$2</tt>,g;
   #warn "1=$1, 2=$2, 3=$3, $string\n";
 
-  # arbitrary Unicode character; this command doesn't exist in (La)TeX
-  # TUGboat, but useful for translating, e.g., tb130knuth-tuneup.bbl.
-  $string =~ s,\\tbunichar$endcw\{(.*?)\},\\x{$1}},g;
-
-  # Package names, etc.
-  $string =~ s,\\tbcode$endcw\{(.*?)\},\\texttt{$1},g;
-
-  # backslashes and braces.
-  # 
+  # Backslashes and braces.
   # By the way, for plain text output, namely bibliographies, we don't
   # preserve font changes, so the bbls on the landing pages don't have
   # typewriter. Just mentioning here since it's especially noticeable.
   $string =~ s,\\cs$endcw\{(.*?)\},\\texttt{\\textbackslash $1},g;
   $string =~ s,\\tubbraced$endcw\{(.*?)\}
               ,\\texttt{\\textbraceleft\ $1\\textbraceright},gx;
+
+  # Package names, etc.
+  $string =~ s,\\tbcode$endcw\{(.*?)\},\\texttt{$1},g;
+
+  # \meta
+  $string =~ s,\\meta$endcw\{(.*?)\},\\x{27e8}\\textit{$1}\\x{27e9},g;
+
+  # \Dash and \dash eliminate preceding glue.
+  $string =~ s/\s*\\Dash$endcw/\\x{2014}/g; # em dash
+  $string =~ s/\s*\\dash$endcw/\\x{2013}/g; # en-dash
 
   # 
   # no arguments, non-empty replacements.
@@ -84,7 +91,6 @@ sub LaTeX_ToUnicode_convert_hook {
   $string =~ s/\\CTAN$endcw/CTAN/g;
   $string =~ s/\\CWEB$endcw/CWEB/g;
   $string =~ s/\\ConTeXt$endcw/ConTeXt/g;
-  $string =~ s/\\Dash$endcw/\\x{2014}/g; # em dash
   $string =~ s/\\DTD$endcw/DTD/g;
   $string =~ s/\\FAQ$endcw/FAQ/g;
   $string =~ s/\\GNU$endcw/GNU/g;
@@ -118,6 +124,7 @@ sub LaTeX_ToUnicode_convert_hook {
   $string =~ s/\\XHTML$endcw/XHTML/g;
   $string =~ s/\\XML$endcw/XML/g;
   $string =~ s/\\XSLT$endcw/XSLT/g;
+  $string =~ s/\\YAML$endcw/YAML/g;
   #
   #  ConTeXt all-caps.
   $string =~ s/\\ALEPH$endcw/Aleph/g;
@@ -142,7 +149,7 @@ sub LaTeX_ToUnicode_convert_hook {
   # lowercase control words.
   $string =~ s/\\ams$endcw/AMS/g;
   $string =~ s/\\break$endcw/ /g;
-  $string =~ s/\\dash$endcw/\\x{2013}/g; # en-dash
+  $string =~ s/\\ctanbibpkgname$endcw//g;
   $string =~ s/\\epTeX$endcw/epTeX/g;
   $string =~ s/\\fntcjkserif$endcw/ /g;
   $string =~ s/\\hyph$endcw/-/g;
@@ -240,7 +247,11 @@ sub LaTeX_ToUnicode_convert_hook {
   # Voss bibliographies.
   $string =~ s/\\Lpack$endcw//g;
   
-  # Wermuth bibliographies.
+  # Wermuth bibliographies. First replace 
+  #   \\bibref \\\(cite.*\):
+  # with 
+  #   \\bibitem{\1}
+  # and replace the final \endgroup with \end{thebibliography}.
   $string =~ s/(\\par$endcw)?\\[bB]iburl$endcw(.*?)\\endurl/ \\url{$2}/mg;
   $string =~ s/\\[eE]ndbib\([0-9-]+\)//g;
 
